# rest-api-client

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
crates/json-api-client/: Cargo.toml  README.md
crates/json-api-client/src/: api_client.rs  lib.rs
crates/json-placeholder-data/: Cargo.toml
crates/json-placeholder-data/src/: lib.rs
crates/json-placeholder-data/src/albums/: mod.rs
crates/json-placeholder-data/src/comments/: mod.rs
crates/json-placeholder-data/src/photos/: mod.rs  photos.json
crates/json-placeholder-data/src/posts/: mod.rs
crates/json-placeholder-data/src/todos/: mod.rs
crates/json-placeholder-data/src/users/: mod.rs
crates/lipl-api-client/: Cargo.toml
crates/lipl-api-client/examples/: 01.rs
crates/lipl-api-client/src/: lib.rs
crates/placeholder/: Cargo.toml
crates/placeholder/src/: lib.rs
crates/rest-json-client/: Cargo.toml  README.md
crates/rest-json-client-async/: Cargo.toml
crates/rest-json-client-async/src/: lib.rs
crates/rest-json-client/src/: lib.rs
examples/: 01.rs
src/: api_client.rs  error.rs  lib.rs  lipl_api_client.rs  main.rs
