[package]
name = "json_api_client"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.60"
derive = "1.0.0"
features = "0.10.0"
futures-util = "0.3.25"
lipl-core = { path = "../lipl/crates/lipl-core" }
reqwest = { version = "0.11", features = ["json", "gzip"] }
serde = { version = "1.0.151", features = ["derive"] }
thiserror = "1.0.38"

[dev-dependencies]
tokio = { version = "1.23", features = ["macros", "rt"] }
lipl-core = { path = "../lipl/crates/lipl-core" }
