[workspace]
resolver = "2"
members = [
    "crates/json-placeholder-data",
    "crates/lipl-api-client",
    "crates/rest-json-client",
    "crates/rest-json-client-async"
]

[workspace.package]
authors = ["Paul Min"]
edition = "2021"
license = "MIT"
repository = "https://github.com/paulusminus/rest-api-client"
rust-version = "1.64.0"
version = "0.2.1"
