[workspace]
resolver = "3"
members = [
    "crates/json-placeholder-data",
    "crates/lipl-api-client",
    "crates/rest-json-client",
]

[workspace.package]
authors = ["Paul Min"]
edition = "2024"
license = "MIT"
repository = "https://github.com/paulusminus/rest-api-client"
version = "0.2.3"

[profile.release]
strip = true
lto = true
