[package]
authors.workspace = true
name = "json-api-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
derive_builder = "0.12.0"
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json", "gzip"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
placeholder = { path = "../placeholder" }
tokio = { version = "1", features = ["rt", "macros"] }
tokio-test = "0.4.3"
