[package]
authors.workspace = true
description = "Copy of the data on https://jsonplaceholder.typicode.com/ used in testing"
edition.workspace = true
license.workspace = true
name = "json-placeholder-data"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.113"
serde_with = { version = "3.6.1", default-features = false }
