[package]
edition.workspace = true
name = "lipl-api-client"
rust-version.workspace = true
version.workspace = true

[dependencies]
async-trait = "0.1"
lipl-core = { git = "https://github.com/paulusminus/lipl-storage", default-features = false }
rest-json-client = "0.2"
futures-util = "0.3"

[dev-dependencies]
tokio = { version = "1.23", features = ["rt", "macros"] }
