[package]
name = "rest-json-client-async"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
async-trait = "0.1.78"
futures-util = "0.3.30"
http-body-util = "0.1.1"
hyper = "1.2.0"
hyper-rustls = { version = "0.27.0", features = ["http2", "webpki-roots"] }
hyper-util = { version = "0.1.3", features = ["http1", "http2", "client", "client-legacy"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["decompression-gzip"] }

[dev-dependencies]
tokio = { version = "1.36.0", features = ["macros"] }
