[package]
authors.workspace = true
description = "Utility library for easing http json api request"
edition.workspace = true
license.workspace = true
name = "rest-json-client"
rust-version.workspace = true
version.workspace = true

[dependencies]
# derive_builder = "0.12.0"
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json", "gzip"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
placeholder = { path = "../placeholder" }
serde_with = "3.3.0"
tokio = { version = "1", features = ["rt", "macros"] }
tokio-test = "0.4.3"
