[package]
authors.workspace = true
description = "Utility library for easing http json api request"
edition.workspace = true
license.workspace = true
name = "rest-json-client"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "gzip"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
json-placeholder-data = { version = "0.2", path = "../json-placeholder-data/" }
tokio = { version = "1", features = ["rt", "macros"] }
tokio-test = "0.4.3"
